--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  
 </head>
 <body>  
-  <section class="website-section">
+  <main class="website-section" role="mail">
     <div class="qr-container">
       <img src="images/image-qr-code.png" alt="The QR Image">
       <div class="qr-text">
@@ -21,6 +21,6 @@
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </div>  
-  </section>
+  </main>
 </body>
 </html>
