--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  
 </head>
 <body>  
-  <main class="website-section" role="mail">
+  <main role="main" class="website-section" >
     <div class="qr-container">
       <img src="images/image-qr-code.png" alt="The QR Image">
       <div class="qr-text">
